ading some style

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,48 +12,57 @@
 	margin: 0;
 	padding: 0;
 }
-
+:root{
+    --editorbg:#1E1E1E;
+    --dragbar:#3C3C3C;
+    --darkgrey:#333333;
+     --darkgreytrans:rgba(51, 51, 51, 0.7);
+}
 body{
   font-size: 0.8em;
+  background-color: black;
   
 }
 
 .wrap {
-    position: relative;
+    position: absolute;
     top: 0%;
     left: 50%;
     width: 100%;
     min-width: 320px;
+   
     transform: translate(-50%, 0%);
+    overflow: hidden;
+    background-color: rgba(51, 51, 51, 0.5);
+    
+ border-radius: 1em;
+    
 }
-.ratio {
-    width: 50%;
-    padding-top: 0%;
- 
-}
+
 .wrap__inner {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(78, 75, 92, 0.1);
+    background-color:var( --darkgreytrans);
      z-index: 1;
+    
+  
 }
 .wrap__inner:after {
     content: "";
     display: block;
     width: 100%;
     height: 100%;
-   
-   
 }
+
 canvas{
      position: absolute;
   top: 0%;
   left: 0%;
 width: 100%;
-    border: dashed 2px rgb(158, 53, 53);
+   /* border: dashed 2px rgb(158, 53, 53);*/
 }
 .croparrea{
   position: absolute;
@@ -62,12 +71,18 @@ width: 100%;
   transform: translate(-50%, -50%);
   width: 90%;
   height: 90%;
-  border: dashed 2px rgb(226, 223, 223);
-  background-color: #F8F8F8;
+  border: dashed 1px rgb(241, 241, 241);
+  background-color:var( --darkgrey);
   z-index: 0;
 }
 
-
+.dragbar{
+    position: relative;
+    width: 100%;
+    height: 0rem;
+    background: var(--dragbar);
+    display: none;
+}
 
 
 @media (min-width: 576px) { 
@@ -76,72 +91,49 @@ width: 100%;
 
 /** Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) { 
-
+.wrap {
+    width: 80vw;
+    transform: translate(-50%, 10%);
+}
  }
 
 /** Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) { 
 .wrap {
-    position: relative;
-    top: 0%;
-    left: 50%;
-    width: 60vw;
-    min-width: 320px;
+    width: 80vw;
     transform: translate(-50%, 10%);
+}
+.dragbar{
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 1.7rem;
+    background: var(--dragbar);
 }
  }
 
 /** X-Large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) { 
 .wrap {
-    position: relative;
-    top: 0%;
-    left: 50%;
     width: 50vw;
-    min-width: 320px;
-    transform: translate(-50%, 10%);
+    transform: translate(-50%, 5%);
 }
  }
 
 /** XX-Large devices (larger desktops, 1400px and up)*/
 @media (min-width: 1400px) { 
 .wrap {
-    position: relative;
-    top: 0%;
-    left: 50%;
     width: 40vw;
-    min-width: 320px;
-    transform: translate(-50%, 10%);
+    transform: translate(-50%, 5%);
 }
  }
 
-/*
-.col-xl-5{
-    border: solid 1px rgb(78, 78, 78);
-     border-radius: 1%;
-    overflow: hidden;
 
-}
-.canvas-wrapper{
-    position: relative;
-    
-  }
   
 
 
 .toolbar{
-     justify-content: center!important;
-     display: flex!important;
-     flex: 0 0 auto;
-    width: 41.6666666667%;
-       --bs-gutter-x: 1.5rem;
-    --bs-gutter-y: 0;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: calc(var(--bs-gutter-y) * -1);
-    margin-right: calc(var(--bs-gutter-x)/ -2);
-    margin-left: calc(var(--bs-gutter-x)/ -2);
+   
     background-color: #2b2b2b;
     
 }
-*/
